[package]
name = "rust-autograd"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.12"
ndarray = { version = "0.15", optional = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
